--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
           </p>
-          <button class="bet-button">Сделать ставку</button>
+          <button type="bet-button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots">
@@ -85,9 +85,9 @@
             <a class="card-link" href="#">
               <article class="cards card_type_book">
                 <div class="overlay"></div>
-                <h4 class="card__title">
+                <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
-                </h4>
+                </h3>
                 <p class="card__text">
                   Объёмом почти в тысячу страниц. Иногда без знаков препинания и
                   с переходами на древнеанглийский. В ней одновременно
@@ -103,9 +103,9 @@
             <a class="card-link" href="#">
               <article class="cards card_type_picture">
                 <div class="overlay"></div>
-                <h5 class="card__title">
+                <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
-                </h5>
+                </h3>
                 <p class="card__text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
@@ -127,7 +127,7 @@
           />
         </div>
         <div class="about__column">
-          <h6 class="about__title">Об аукционе</h6>
+          <h2 class="about__title">Об аукционе</h2>
           <div class="about__column-text">
             <p class="about__text">
               Здесь вы не встретите очередное пафосное собрание невероятно
@@ -170,7 +170,7 @@
       </nav>
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="">
+          <a class="footer__social-link" href="#">
             <img
               class="footer__social-icon"
               src="./images/yt.svg"
@@ -179,7 +179,7 @@
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="">
+          <a class="footer__social-link" href="#">
             <img
               class="footer__social-icon"
               src="./images/vk.svg"
@@ -188,7 +188,7 @@
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="">
+          <a class="footer__social-link" href="#">
             <img
               class="footer__social-icon"
               src="./images/pinterest.svg"
